--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Cachorro salsicha</h1>
     <img src="https://images.app.goo.gl/MRjCY2u6A1JHG39dA">
+    <h1>Cachorro de ia</h1>
+    <img src="https://img.freepik.com/fotos-premium/cachorro-pequeno-lindo-cachorro-ia-generativa_141130-5546.jpg">
 </body>
 </html>
